Possible compatibility problems with earlier versions marked with '*'.

Fixed bug #307: It was impossible to specify indefinite/no timeout
for ZOOM_event. Special timeout value -1 now means indefinite timeout
(i.e.  no timeout).

Added support for multiple languages and charsets to be specified in
ZOOM. Each charset/language is separated by a blank. If negotiation is
in effect in init-response, Option
"negotiation-charset-in-effect-for-records" set to 1(true) or 0(false). 
Code based on patch by Vasiliy Osadchuk.

Fixed bug #306: infinite recursion that occurred when calling
yaz_log_level_init as the first call (before other log level or
nmem_init calls)

Fixed bug in scan handling in front end server: if preferred-Position-In-
Response was non-present, a NULL pointer referece was performed.

--- 2.1.4 2005/04/26 

Changed include/yaz/diagbib1.h and added include/yaz/diagsrw.h with
diagnostic messages+codes for Bib-1 and SRW. Preprocessor defines are
now defined for all those error codes. So instead of putting 109 in
your program you'd use YAZ_BIB1_DATABASE_UNAVAILABLE. The messages
are generated from a .csv - file. See src/bib1.csv and srw/srw.csv.

Modified the yaz-marcdump utility to skip garbage bytes between MARC
records in a file.

Fixed bug - uninitialized memory - due to bad code for fix of bug #272.

Program yaz-client now exits and produces an error message if multiple
Z39.50 servers are specified on the command line (none or one allowed
only).

Program yaz-marcdump skips garbage bytes between ISO2709 records rather
than abort.

--- 2.1.2 2005/03/16 

Fixed bug #273: Update for recent MARC-8 -> UNICODE changes. 

Fixed bug #272: Preserve spacing for CCL terms.

--- 2.1.0 2005/03/14 

Added support for virtual hosts and multiple backend servers for
the YAZ frontend server. The configution is XML based and
support specificition of CQL to RPN mappings and explain information.
See section "Virtual Hosts" in the YAZ manual.
